--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <div class="card-body">
                 <h5 class="card-title">Lecto Notes</h5>
                 <p class="card-text">Open to uncover the secrets of Lectio.</p>
-                <a href="about-page-yes.html" class="btn btn-primary">About Us!</a>
+                <a href="about-page-no.html" class="btn btn-primary">About Us!</a>
             </div>
         </div>
     </div>
